# PokemonChessBackend

./: .gitignore  Cargo.toml  README.md  game_names.txt  run.sh
settings/: Cofagrigus_Victreebel.pchess  Litten_Aggron.pchess  Whimsicott_Glimmet.pchess
src/: app_state.rs  chess.rs  chess_history.rs  chess_state.rs  chess_state_history.rs  chess_structs.rs  database.rs  game.rs  main.rs  messages.rs  moves.rs  name_generator.rs  pieces.rs  pokemon_names.rs  pokemon_types.rs  settings.rs  websockets.rs
