[package]
name = "pokemon_chess_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version="0.6.1", features = ["ws", "macros"]}
env_logger = "0.10.0"
futures-util = "0.3.30"
http = "0.2.9"
log = "0.4.20"
rand = "0.8.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["full"] }
tokio-tungstenite = "0.23.1"
tower-http = { version = "0.4.3", features = ["cors"] }
